add new envs to .envs.example

--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,8 @@ APPLE_CLIENT_ID=<id>
 APPLE_TEAM_ID=<id> 
 APPLE_KEY_ID=<id> 
 APPLE_PRIVATE_KEY=<key>
+FACEBOOK_CLIENT_ID=id
+FACEBOOK_CLIENT_SECRET=secret
 ACCESS_TOKEN_EXPIRE_MINUTES=1440 
 REFRESH_TOKEN_EXPIRE_MINUTES=100000 
 # generate your own JWK key
